--- a/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
+++ b/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
@@ -67,7 +67,7 @@
     <string name="category_favorite">Favorite</string>
     <string name="category_file">Fișiere</string>
     <string name="category_files">Fișiere</string>
-    <string name="category_midrive">KuaiPan</string>
+    <string name="category_kuaipan">KuaiPan</string>
     <string name="category_midrive">Mi Drive</string>
     <string name="category_music">Muzică</string>
     <string name="category_other">Altele</string>
