--- a/Romanian/main/MiuiCamera.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiCamera.apk/res/values-ro/strings.xml
@@ -3,16 +3,18 @@
     <string name="access_sd_fail">Nu se poate accesa cardul SD</string>
     <string name="accessibility_audio_shutter_bg">Fundal audio la declanșare</string>
     <string name="accessibility_camera_picker">Comutați între camera frontală și cea posterioară</string>
-    <string name="accessibility_countdown">Buton temporizare</string>
+    <string name="accessibility_effect_mode_button">Buton efecte</string>
     <string name="accessibility_flash_mode_button">Buton bliţ</string>
     <string name="accessibility_hdr">Buton comutare HDR</string>
     <string name="accessibility_module_picker">Selector modul</string>
     <string name="accessibility_panorama_review_cancel">Anulare salvare panoramă</string>
+    <string name="accessibility_peak">Buton focus</string>
     <string name="accessibility_review_thumbnail">Ultimele fotografii</string>
     <string name="accessibility_seek_bar_line">Bară de căutare</string>
     <string name="accessibility_setting_button">Buton setări adiţionale</string>
     <string name="accessibility_shutter_button">Buton declanşare</string>
     <string name="accessibility_skin_beautify_button">Buton înfrumuseţare</string>
+    <string name="accessibility_stereo_button">Mod cameră duală</string>
     <string name="accessibility_video_capture_button">Buton captură video</string>
     <string name="accessibility_video_module_picker">Selector modul video</string>
     <string name="accessibility_video_pause_button">Buton pauză video</string>
@@ -20,8 +22,9 @@
     <string name="burst_shoot_exit_button_text">Dezactivaţi fotografierea în serie</string>
     <string name="camera_disabled">Camera a fost dezactivată din motive de securitate.</string>
     <string name="camera_error_title">Eroare Cameră foto</string>
-    <string name="camera_face_beauty_parameter_key">xiaomi-still-beautify-values</string>
     <string name="camera_label">Cameră</string>
+    <string name="camera_mode_options">Moduri</string>
+    <string name="camera_setting">Setări cameră</string>
     <string name="camera_settings_label">Cameră</string>
     <string name="camera_snap_mode_title">Mod instantaneu</string>
     <string name="camera_snap_mode_title_detail">Apăsați pentru a vizualiza detaliile</string>
@@ -37,7 +40,11 @@
     <string name="confirm_restore_message">Restabiliţi setările prestabilite ale camerei?</string>
     <string name="confirm_restore_title">Restabiliţi setările prestabilite</string>
     <string name="dialog_ok">OK</string>
-    <string name="effect_setting_top_text">Filtre</string>
+    <string name="dual_camera_lens_covered_toast">Lentile acoperite.</string>
+    <string name="dual_camera_low_constract_toast">Contrastul scăzut poate afecta efectele Cameră duală.</string>
+    <string name="dual_camera_lowlight_toast">Iluminarea slabă poate afecta efectele Cameră duală.</string>
+    <string name="dual_camera_too_close_toast">Prea aproape de obiect pentru a obține efectele Cameră duală.</string>
+    <string name="dual_camera_use_hint">Modul Cameră duală poate obține efectul de blur; distanța dintre cameră și obiect trebuie să fie mai mică de 2 metri</string>
     <string name="empty">" "</string>
     <string name="error_fail_to_start_audio_capture">Nu se poate porni înregistrarea vocală. Microfonul poate fi utilizat de o altă aplicaţie.</string>
     <string name="face_analyze_info">Vârstă: %2$s (%1$s)</string>
@@ -65,7 +72,6 @@
     <string name="face_beauty_intelligent_level_1">Scăzut</string>
     <string name="face_beauty_intelligent_level_2">Mediu</string>
     <string name="face_beauty_intelligent_level_3">Ridicat</string>
-    <string name="find_other_qrcode">Găsiţi alt cod QR</string>
     <string name="image_file_name_format">"'IMG'_ddMMyyyy_HHmmss"</string>
     <string name="no_storage">Introduceţi un card SD.</string>
     <string name="not_enough_space">Cardul SD este plin</string>
@@ -80,6 +86,7 @@
     <string name="pano_how_to_use_prompt_to_move">Mutați dispozitivul încet</string>
     <string name="pano_review_saving_indication_str">Salvare…</string>
     <string name="pano_too_fast_prompt">Prea repede</string>
+    <string name="path_settings">Aplicații de sistem/Camera/Setări</string>
     <string name="pref_advance_settings">Setări adiţionale</string>
     <string name="pref_audio_focus_entry_front">Pe frunte</string>
     <string name="pref_audio_focus_entry_general">Normal</string>
@@ -106,11 +113,18 @@
     <string name="pref_camera_autoexposure_entry_spotmetering">Fix</string>
     <string name="pref_camera_autoexposure_title">Setări expunere automată</string>
     <string name="pref_camera_coloreffect_entry_aqua">Acvatic</string>
+    <string name="pref_camera_coloreffect_entry_big_face">Extindere</string>
+    <string name="pref_camera_coloreffect_entry_blackwhite">B&W</string>
     <string name="pref_camera_coloreffect_entry_brannan">Zori de zi</string>
     <string name="pref_camera_coloreffect_entry_earlybird">Toamnă</string>
     <string name="pref_camera_coloreffect_entry_fisheye">Ochi de peşte</string>
-    <string name="pref_camera_coloreffect_entry_gaussianblur">Estompare</string>
+  <string name="pref_camera_coloreffect_entry_instagram_clarendon">Color pop</string>
+    <string name="pref_camera_coloreffect_entry_instagram_crema">Rustic</string>
+    <string name="pref_camera_coloreffect_entry_instagram_hudson">Înghețat</string>
+    <string name="pref_camera_coloreffect_entry_instagram_rise">Lomo</string>
     <string name="pref_camera_coloreffect_entry_jstyle">Japonez</string>
+    <string name="pref_camera_coloreffect_entry_light_tunnel">Tunel</string>
+    <string name="pref_camera_coloreffect_entry_long_face">Dilatare</string>
     <string name="pref_camera_coloreffect_entry_mirror">Oglindă</string>
     <string name="pref_camera_coloreffect_entry_mono">Mono</string>
     <string name="pref_camera_coloreffect_entry_mosaic">Mozaic</string>
@@ -121,17 +135,21 @@
     <string name="pref_camera_coloreffect_entry_sepia">Sepia</string>
     <string name="pref_camera_coloreffect_entry_seventy">Anii 1970</string>
     <string name="pref_camera_coloreffect_entry_sketch">Schiță</string>
+    <string name="pref_camera_coloreffect_entry_small_face">Comprimare</string>
     <string name="pref_camera_coloreffect_entry_vivid">Aprins</string>
-    <string name="pref_camera_coloreffect_entry_xproii">XProII</string>
+    <string name="pref_camera_coloreffect_entry_vsco_a4">Analog</string>
+    <string name="pref_camera_coloreffect_entry_vsco_f2">Mat</string>
+    <string name="pref_camera_coloreffect_entry_xproii">Vibrant</string>
     <string name="pref_camera_coloreffect_entry_yesteryear">Odinioară</string>
     <string name="pref_camera_coloreffect_title">Efecte de culori</string>
     <string name="pref_camera_contrast_title">Contrast</string>
+    <string name="pref_camera_delay_capture_default">5</string>
     <string name="pref_camera_delay_capture_entry_10s">10s</string>
     <string name="pref_camera_delay_capture_entry_3s">3s</string>
     <string name="pref_camera_delay_capture_entry_5s">5s</string>
     <string name="pref_camera_delay_capture_entry_audio">Audio</string>
-    <string name="pref_camera_delay_capture_entry_off">Dezactivat</string>
     <string name="pref_camera_delay_capture_title">Temporizator</string>
+    <string name="pref_camera_exposuretime_default">0</string>
     <string name="pref_camera_exposuretime_entry_0.5">2s</string>
     <string name="pref_camera_exposuretime_entry_1">1s</string>
     <string name="pref_camera_exposuretime_entry_1000">1/1000s</string>
@@ -144,6 +162,7 @@
     <string name="pref_camera_exposuretime_entry_32s">32s</string>
     <string name="pref_camera_exposuretime_entry_4">1/4s</string>
     <string name="pref_camera_exposuretime_entry_4s">4s</string>
+    <string name="pref_camera_exposuretime_entry_500">1/500s</string>
     <string name="pref_camera_exposuretime_entry_60">1/60s</string>
     <string name="pref_camera_exposuretime_entry_8">1/8s</string>
     <string name="pref_camera_exposuretime_entry_8s">8s</string>
@@ -263,12 +282,17 @@
     <string name="pref_camera_skinToneEnhancement_entry_enable">Activată</string>
     <string name="pref_camera_snap_enable_title">Mod captură instantanee</string>
     <string name="pref_camera_snap_entry_off">Oprit</string>
-    <string name="pref_camera_snap_enable_summary">Atunci când ecranul este oprit, apăsați și țineți apăsat butonul Volum ▼ pentru a intra în modul instantaneu. Apăsați-l din nou pentru a face o fotografie.</string>
+    <string name="pref_camera_snap_entry_take_movie">Când ecranul este oprit, apăsați și mențineți apăsat butonul de Volum- pentru a începe să filmați. Eliberați-l pentru a opri filmarea.</string>
     <string name="pref_camera_snap_entry_take_picture">Atunci când ecranul este oprit, apăsați și țineți apăsat butonul Volum ▼ pentru a intra în modul fotografiere continuă. Eliberați butonul pentru a opri fotografierea în rafală.</string>
     <string name="pref_camera_snap_toast_when_volume_can_wake_screen">"Nu se poate utiliza modul captură instantanee în timp  ce  \"Utilizarea butoanelor de volum pentru trezire\" este activă."</string>
     <string name="pref_camera_snap_value_off">Oprit</string>
+    <string name="pref_camera_snap_value_take_movie">Film</string>
     <string name="pref_camera_snap_value_take_picture">Fotografie</string>
     <string name="pref_camera_sound_title">Sunete cameră</string>
+    <string name="pref_camera_square_mode_title">Pătrat</string>
+    <string name="pref_camera_stereo_mode_title">Stereo</string>
+    <string name="pref_camera_tilt_shift_entry_circle">Cerc</string>
+    <string name="pref_camera_tilt_shift_entry_parallel">Paralel</string>
     <string name="pref_camera_tilt_shift_title">Înclinare</string>
     <string name="pref_camera_touchafaec_entry_off">Dezactivată</string>
     <string name="pref_camera_touchafaec_entry_on">Activată</string>
@@ -310,7 +334,12 @@
     <string name="pref_setting_title">Setări</string>
     <string name="pref_simple_hdr_entry_off">Oprit</string>
     <string name="pref_simple_hdr_entry_on">Pornit</string>
-    <string name="pref_video_captrue_ability_title">Abilitate captare</string>
+    <string name="pref_skin_beautify_color_title">Culoare</string>
+    <string name="pref_skin_beautify_eye_title">Ochi</string>
+    <string name="pref_skin_beautify_intelligent_title">Inteligent</string>
+    <string name="pref_skin_beautify_slim_title">Zvelt</string>
+    <string name="pref_skin_beautify_smooth_title">Neted</string>
+    <string name="pref_video_captrue_ability_title">Captare imagini în timpul filmării</string>
     <string name="pref_video_focusmode_entry_auto">Apăsare</string>
     <string name="pref_video_focusmode_entry_continuous">CAF</string>
     <string name="pref_video_focusmode_title">Mod focusare</string>
@@ -345,6 +374,7 @@
     <string name="pref_video_time_lapse_frame_interval_title">Interval de timp</string>
     <string name="preparing_sd">Verificare card SD…</string>
     <string name="record_back_pressed_hint">Atingeţi din nou pentru a opri înregistrarea</string>
+    <string name="search_settings">Setări cameră;Calitate;Calitatea imaginii;Localizare fotografie;Localizare imagine;Detectare față;Sunete cameră</string>
     <string name="see_qrcode_detals">Vizualizaţi detaliile</string>
     <string name="setting_top_text">Moduri cameră</string>
     <string name="simple_mode_button_asd_flash">Dezactivaţi captarea cu bliţ</string>
@@ -357,17 +387,17 @@
     <string name="simple_mode_button_text_fisheye">Dezactivaţi Ochi de peşte</string>
     <string name="simple_mode_button_text_gradienter">Dezactivare Îndreptare</string>
     <string name="simple_mode_button_text_hand_night">Dezactivaţi modul nocturn</string>
-    <string name="simple_mode_button_text_hdr">Dezactivaţi modul HDR</string>
     <string name="simple_mode_button_text_magic_mirror">Activați Oglinda Magică</string>
     <string name="simple_mode_button_text_manual">Dezactivaţi modul manual</string>
     <string name="simple_mode_button_text_panorama">Dezactivaţi panorama</string>
     <string name="simple_mode_button_text_scene">Dezactivaţi modul scenă</string>
-    <string name="simple_mode_button_text_slow_video">Dezactivaţi intervalul de timp</string>
+    <string name="simple_mode_button_text_slow_video">Dezactivați modul interval de timp</string>
+    <string name="simple_mode_button_text_square">Dezactivați modul Pătrat</string>
+    <string name="simple_mode_button_text_stereo_mode">Dezactivați modul Stereo</string>
     <string name="simple_mode_button_text_tilt_shift">Dezactivaţi înclinarea</string>
     <string name="simple_mode_button_text_ubifocus">Dezactivaţi modul refocusare</string>
-    <string name="snapshot_lower_than_video">Dimensiunea fotografiei este mai mică decât dimensiunea video. Selectaţi o rezoluţie mai mare sau egală cu dimensiunea video actuală.</string>
-    <string name="snapshotsize_low_powermode">Nu se poate capta o fotografie în modul Economisire energie. Selectaţi alt mod.</string>
-    <string name="spaceIsLow_content">Spaţiul de stocare de pe cardul SD s-a epuizat</string>
+    <string name="spaceIsLow_content_external_storage_priority">Nu mai există spațiu de stocare pe cardul SD</string>
+    <string name="spaceIsLow_content_primary_storage_priority">Nu mai există spațiu liber pe stocarea USB</string>
     <string name="start_capture">OK</string>
     <string name="tap_to_exposure">Atingeți pentru a regla manual expunerea</string>
     <string name="tap_to_focus">Atingeţi pentru focusare</string>
