--- a/Romanian/main/miui.apk/res/values-ro/strings.xml
+++ b/Romanian/main/miui.apk/res/values-ro/strings.xml
@@ -417,41 +417,41 @@
     <string name="monday">Luni</string>
     <string name="monday_short">Lu</string>
     <string name="monday_shortest">L</string>
-    <string name="month_april">aprilie</string>
-    <string name="month_april_short">apr.</string>
+    <string name="month_april">Aprilie</string>
+    <string name="month_april_short">Apr.</string>
     <string name="month_april_shortest">A</string>
-    <string name="month_august">august</string>
-    <string name="month_august_short">aug.</string>
+    <string name="month_august">August</string>
+    <string name="month_august_short">Aug.</string>
     <string name="month_august_shortest">A</string>
-    <string name="month_december">decembrie</string>
-    <string name="month_december_short">dec.</string>
+    <string name="month_december">Decembrie</string>
+    <string name="month_december_short">Dec.</string>
     <string name="month_december_shortest">D</string>
-    <string name="month_february">februarie</string>
-    <string name="month_february_short">feb.</string>
+    <string name="month_february">Februarie</string>
+    <string name="month_february_short">Feb.</string>
     <string name="month_february_shortest">F</string>
-    <string name="month_january">ianuarie</string>
-    <string name="month_january_short">ian.</string>
+    <string name="month_january">Ianuarie</string>
+    <string name="month_january_short">Ian.</string>
     <string name="month_january_shortest">I</string>
-    <string name="month_july">iulie</string>
-    <string name="month_july_short">iul.</string>
+    <string name="month_july">Iulie</string>
+    <string name="month_july_short">Iul.</string>
     <string name="month_july_shortest">I</string>
-    <string name="month_june">iunie</string>
-    <string name="month_june_short">iun.</string>
+    <string name="month_june">Iunie</string>
+    <string name="month_june_short">Iun.</string>
     <string name="month_june_shortest">I</string>
-    <string name="month_march">martie</string>
-    <string name="month_march_short">mar.</string>
+    <string name="month_march">Martie</string>
+    <string name="month_march_short">Mar.</string>
     <string name="month_march_shortest">M</string>
-    <string name="month_may">mai</string>
-    <string name="month_may_short">mai</string>
+    <string name="month_may">Mai</string>
+    <string name="month_may_short">Mai</string>
     <string name="month_may_shortest">M</string>
-    <string name="month_november">noiembrie</string>
-    <string name="month_november_short">noi.</string>
+    <string name="month_november">Noiembrie</string>
+    <string name="month_november_short">Noi.</string>
     <string name="month_november_shortest">N</string>
-    <string name="month_october">octombrie</string>
-    <string name="month_october_short">oct.</string>
+    <string name="month_october">Octombrie</string>
+    <string name="month_october_short">Oct.</string>
     <string name="month_october_shortest">O</string>
-    <string name="month_september">septembrie</string>
-    <string name="month_september_short">sept.</string>
+    <string name="month_september">Septembrie</string>
+    <string name="month_september_short">Sept.</string>
     <string name="month_september_shortest">S</string>
     <string name="more">Mai multe</string>
     <string name="morning">AM</string>
