--- a/Romanian/main/MiuiCamera.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiCamera.apk/res/values-ro/strings.xml
@@ -114,7 +114,7 @@
     <string name="pref_camera_autoexposure_title">Setări expunere automată</string>
     <string name="pref_camera_coloreffect_entry_aqua">Acvatic</string>
     <string name="pref_camera_coloreffect_entry_big_face">Extindere</string>
-    <string name="pref_camera_coloreffect_entry_blackwhite">B&W</string>
+    <string name="pref_camera_coloreffect_entry_blackwhite">Alb-negru</string>
     <string name="pref_camera_coloreffect_entry_brannan">Zori de zi</string>
     <string name="pref_camera_coloreffect_entry_earlybird">Toamnă</string>
     <string name="pref_camera_coloreffect_entry_fisheye">Ochi de peşte</string>
@@ -143,13 +143,11 @@
     <string name="pref_camera_coloreffect_entry_yesteryear">Odinioară</string>
     <string name="pref_camera_coloreffect_title">Efecte de culori</string>
     <string name="pref_camera_contrast_title">Contrast</string>
-    <string name="pref_camera_delay_capture_default">5</string>
     <string name="pref_camera_delay_capture_entry_10s">10s</string>
     <string name="pref_camera_delay_capture_entry_3s">3s</string>
     <string name="pref_camera_delay_capture_entry_5s">5s</string>
     <string name="pref_camera_delay_capture_entry_audio">Audio</string>
     <string name="pref_camera_delay_capture_title">Temporizator</string>
-    <string name="pref_camera_exposuretime_default">0</string>
     <string name="pref_camera_exposuretime_entry_0.5">2s</string>
     <string name="pref_camera_exposuretime_entry_1">1s</string>
     <string name="pref_camera_exposuretime_entry_1000">1/1000s</string>
